kubernetes/apps/services/paperless/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-service
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "paperless"
    hajimari.io/group: "home"
    hajimari.io/icon: "file-multiple"
spec:
  hostnames:
    - "dms.${SECRET_DOMAIN_2}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-service
          port: 8000
