kubernetes/apps/services/paperless/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-service
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN_2}"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "false"
    hajimari.io/appName: "paperless"
    hajimari.io/group: "home"
    hajimari.io/icon: "file-multiple"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-cloudflare-secure-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "dms.${SECRET_DOMAIN_2}"
      secretName: "dms.${SECRET_DOMAIN_2//./-}-prod-tls"
  rules:
    - host: dms.${SECRET_DOMAIN_2}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-service
                port:
                  number: 8000
